fix: [PD-411] Search Page ui alignement

--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -53,7 +53,10 @@
     }
 
     h2 {
-        line-height: 40px;
+        font-family: "AvenirNext-DemiBold";
+        font-size : 14px;
+        color : #000000;
+        text-transform: uppercase;
         text-align: initial;
     }
 
@@ -118,7 +121,6 @@
 
 
     &::before {
-        display: none !important;
 
         @include after-mobile {
             content: "";
@@ -129,7 +131,7 @@
             z-index: 900;
             margin-left: auto;
             margin-right: auto;
-            left: 55px;
+            left: 2px;
             right: 0;
             text-align: center;
             background-color: #4a4a4a;
@@ -156,7 +158,7 @@
         font-weight: var(--fw-medium);
         letter-spacing: 2px;
         line-height: 25px;
-        padding: 10px 36px;
+        padding: 10px 20px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -270,9 +272,16 @@ div.SearchOverlay.Overlay {
     }
 
     .QuerySuggestionBlock {
-        width: 186px;
+        width: 194px;
         height: 365px;
         opacity: 1;
+
+        h2 {
+            font-family: "AvenirNext-DemiBold";
+            font-size: 14px;
+            color: #000000;
+            text-transform: uppercase;
+        }
     }
 
     .imagesLayouts {
@@ -288,8 +297,10 @@ div.SearchOverlay.Overlay {
 
     .SearchProduct {
         &-Brand {
+            font-family: 'AvenirNext-DemiBold';
+            font-size: 14px;
+            color :#000000;
             text-transform: uppercase;
-            font-weight: bold;
         }
 
         &-ProductName {
@@ -302,6 +313,8 @@ div.SearchOverlay.Overlay {
         &-Info {
             .SearchProduct {
                 &-ProductName{
+                    font-family: 'AvenirNext-Regular';
+                    font-size:13px;
                     width: 165px;
                     height: 18px;
                     text-align: left;
@@ -314,6 +327,11 @@ div.SearchOverlay.Overlay {
             }
         }
         &-SpecialPriceCon{
+            div {
+                font-family: 'AvenirNext-Bold';
+                font-size: 12px;
+                color : #000000;
+            }
             .Price-Wrapper {
                 .Price-Del {
                     margin-right: 10px;
@@ -351,9 +369,11 @@ div.SearchOverlay.Overlay {
     width: 100%;
     
     &-TrandingTag {
+        font-family: 'AvenierNext-Regular';
+        font-size : 13px;
         letter-spacing: var(--unnamed-character-spacing-0);
         text-align: center;
-        letter-spacing: 0px;
+        line-height: 40;
         color: #4A4A4A;
         opacity: 1;
         text-transform: capitalize;
@@ -371,6 +391,9 @@ div.SearchOverlay.Overlay {
                 flex-direction: row;
                 padding: 0px;
                 justify-content: space-between;
+                font-family: 'AvenirNext-Regular';
+                font-size: 14px;
+                color:#000000;
 
                 &::before {
                     display: none;
@@ -387,9 +410,16 @@ div.SearchOverlay.Overlay {
     }
 
     &-Recommended {
+        
+        h2 {
+            font-family: "AvenirNext-DemiBold";
+            letter-spacing: 111;
+            color: #000000;
+            text-transform: uppercase;
+        }
+        font-size: 14px;
         margin-top: 15px;
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 38px;
 
         &::before {
             display: none;
@@ -498,12 +528,12 @@ div.SearchOverlay.Overlay {
     }
 
     h2 {
-        font-size: 17px;
-        text-transform: none;
+        font-family: "AvenirNext";
+        text-transform: uppercase;
+        font-weight: "Demi Bold";
         margin: 0;
         color: #000000;
-        font-weight: 600;
-        letter-spacing: 0;
+        font-size: 14px;
     }
 }
 
