--- a/src/component/SearchSuggestion/SearchSuggestion.style.scss
+++ b/src/component/SearchSuggestion/SearchSuggestion.style.scss
@@ -84,7 +84,6 @@
   &-Recommended {
     margin-top: 15px;
     margin-left: 15px;
-    margin-right: 15px;
 
     ul {
       display: flex;
